--- a/contact_us/style3.css
+++ b/contact_us/style3.css
@@ -1,9 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+.topnav-right{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    display:flex;
+    justify-content:flex-end;
+    align-items: center;
+    padding: 20px 100px;
+}
+.topnav-right a{
+    color:#fff;
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    margin:0 30px;
+    padding:0 10px;
+    border-radius: 20px;
+    transition:0.3s;
+    transition-property: color,background;
+}
+.topnav-right a:hover{
+    color:black;
+    background: #fff;
 }
 
 .show-btn{
@@ -84,8 +110,8 @@ body{
 
   .wrapper{
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 53%;
+    left: 48%;
     transform: translate(-50%, -50%);
     border-radius: 5px;
     box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
