--- a/event/style2.css
+++ b/event/style2.css
@@ -1,10 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
+
+.topnav-right{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    display:flex;
+    justify-content:flex-end;
+    align-items: center;
+    padding: 20px 100px;
+}
+.topnav-right a{
+    color:#fff;
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: none;
+    margin:0 30px;
+    padding:0 10px;
+    border-radius: 20px;
+    transition:0.3s;
+    transition-property: color,background;
+}
+.topnav-right a:hover{
+    color:black;
+    background: #fff;
+}
+
 
 .show-btn{
     color: #0D6EFD;
@@ -30,9 +57,11 @@
   }
 body{
   height: 100vh;
+  width: 100vw;
   background-image: url("pic1.jpg");
-  background-size: cover;
+  background-size:cover;
   background-repeat: no-repeat;
+  overflow:hidden;
   
 }
 
