--- a/CSS/adminpanel.css
+++ b/CSS/adminpanel.css
@@ -11,21 +11,15 @@
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
-  padding-left: 8%;
-  padding-right: 8%;
   box-sizing: border-box;
 }
 .header{
   height:25%;
   display: flex;
-  align-items: center;
   overflow: hidden;
   position: relative;
 }
-.logo{
-  width:150px;
-  height:100px;
-}
+
 .btn{
   cursor: pointer;
   color:#fff;
@@ -41,11 +35,13 @@
 }
 .btn:hover{
   color:#000;
-  background-color: #fff;
+  background-color: rgb(240, 231, 237);
 }
 .content{
   text-align: center;
   margin-top: 3%;
+  padding-left: 8%;
+  padding-right: 8%;
 }
 .content h1{
   font-size: 70px;
