--- a/CSS/loginadmin.css
+++ b/CSS/loginadmin.css
@@ -111,7 +111,7 @@ input[type="submit"]{
   outline: none;
 }
 input[type="submit"]:hover{
-  border-color: #2691d9;
+  border-color: #242728;
   transition: .5s;
 }
 
