--- a/contact_us/style3.css
+++ b/contact_us/style3.css
@@ -95,7 +95,7 @@ body{
     font-size: 30px;
     font-weight: 600;
     color:black;
-    
+    padding-bottom: 20px;
   }
   .content pre{
     color:black;
