--- a/contact_us/style3.css
+++ b/contact_us/style3.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .topnav-right{
@@ -31,7 +31,6 @@
     color:black;
     background: #fff;
 }
-
 .show-btn{
     color: #0D6EFD;
     padding: 13px 18px;
@@ -110,8 +109,8 @@ body{
 
   .wrapper{
     position: absolute;
-    top: 53%;
-    left: 48%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 5px;
     box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
@@ -121,7 +120,7 @@ body{
     font-size: 30px;
     font-weight: 600;
     color:black;
-    padding-bottom: 20px;
+    
   }
   .content pre{
     color:black;
@@ -138,7 +137,5 @@ body{
   .wrapper .content img{
     width: 500px;
     border-radius: 10px;
-    
-
     
   }
